--- a/preamble.tex
+++ b/preamble.tex
@@ -25,6 +25,7 @@
 \newcommand{\KM}[1]{{\color{red} \textbf{KM:} #1}}
 \newcommand{\MS}[1]{{\color{blue} \textbf{MS:} #1}}
 \newcommand{\MZ}[1]{{\color{green} \textbf{MZ:} #1}}
+\newcommand{\RM}[1]{{\color{red} \textbf{RM:} #1}}
 \newcommand{\new}[1]{{\color{cyan} #1}}
 \newcommand{\todo}[1]{{\color{orange} \textbf{TODO:} #1}}
 
