--- a/prelims.tex
+++ b/prelims.tex
@@ -39,16 +39,64 @@ For detailed syntax and semantics of LTL, we refer to \cite{baier2008principles}
 %We sometime exploit the notation and use the same $d_V$ to measure the distance between a set $W\subseteq \sem{V}$ and a point $v\in \sem{V}$, which is defined as follows:
 %$d_V(v,W)= (\inf_{w\in W} |v_1-w_1|, \ldots, \inf_{w\in W} |v_{|V|}-w_{|V|}|)$.
 
-\subsection{System Formalisms}
+% \subsection{System Formalisms}
  
 \smallskip
 \noindent\textbf{Control System.}\
 A \emph{control system} $\Sigma = (X, x_{\init}, U, W, f)$
 consists of a \emph{state space} $X\subseteq \mathbb{R}^n$,
 an \emph{initial state} $x_\init\in X$,
- an \emph{input space} $U\subseteq\mathbb{R}^m$, 
-a compact \emph{disturbance set} $W\subset \mathbb{R}^n$ and
-a \emph{nominal dynamics} $f:X\times U\rightarrow X$. There exists a locally Lipschitz function $f_{con}\colon X\times U\rightarrow X$ and an absolutely continuous function $\beta\colon \reals_{\geq 0} \rightarrow X$ such that for every $x\in X$, constant $u\in U$ and fixed sampling time $\tau>0$, 
+an \emph{input space} $U\subseteq\mathbb{R}^m$, 
+a compact \emph{disturbance set} $W\subset \mathbb{R}^n$ containing $0$, and
+a \emph{nominal dynamics} $f:X\times U\rightarrow X$. 
+A \emph{trajectory} of $\Sigma$ is a finite or infinite sequence $x_0, x_1, \ldots \in X^\infty$
+such that $x_0 = x_{\init}$ and for each $i\geq 0$, there is an $u_i\in U$ and $w_i \in W$ such that
+$x_{i+1} = f(x_i, u_i) + w_i$.
+A trajectory is \emph{nominal} if $w_i = 0$ for all $i\geq 0$.
+Intuitively, a control system represents a (possibly nonlinear) dynamical system with control inputs $U$
+and disturbance from the set $W$.
+
+\smallskip
+\noindent\textbf{Product Control System.}\
+Let $\set{\Sigma^i}_{i\in [1;N]}$, 
+$\Sigma^i=(X^i,x_\init^i,U^i,W^i,f^i)$, for $i \in [1;N]$, be a set of $N$ control systems. 
+The \emph{product control system} of $\set{\Sigma^i}_{i\in [1;N]}$ is defined as the control system 
+$\Sigma^\times = (X^\times, x_\init^\times, U^\times, \set{0^n}, f^\times)$,
+where $X^\times \coloneqq X^1 \times \ldots \times X^N$, 
+$x_\init^\times \coloneqq (x_\init^1, \ldots, x_\init^N)$,
+$U^\times \coloneqq U^1 \times \ldots \times U^N$, 
+$W^\times \coloneqq W^1 \times \ldots \times W^N$, 
+and $f^\times\coloneqq f^1\otimes \ldots \otimes f^N$.
+We use the state projection operator $\proj^{i}\colon X^\times\to X^i$, $\proj^{i}\colon (x^1,\ldots,x^N)\mapsto x^i$. 
+For brevity, we write $\set{\Sigma^i}$ instead of $\set{\Sigma^i}_{i\in [1;N]}$, when the range of $i$ is irrelevant or clear from context.
+
+
+We define control systems and their product over discrete time.
+Such systems can be obtained as time discretizations of continuous-time nonlinear dynamical systems.
+We sketch the connection. 
+\RM{actually I don't know how to do this.}
+Consider $(X, x_\init, U, W, f)$ as above and
+suppose that $f: X \times U \rightarrow X$ is such that $f(\cdot, u)$ is locally Lipschitz for all $u\in U$.
+Given a time horizon $\tau$, an initial state $x_0$, and a constant input $u$, define the \emph{continuous time trajectory} of the system
+on $[0, \tau]$ as an absolutely continuous function $\zeta: [0, \tau] \rightarrow X$ such that $\zeta(0) = x_0$, and
+$\zeta$ satisfies the differential inclusion $\dot{\zeta} \in f(\zeta(t), u) + W$ for almost all $t\in [0,\tau]$.
+
+Now, given a sampling time $\tau > 0$, define the \emph{sampled-time} control system $(X, x_\init, U, W, f_\tau)$ as the control
+system for which $f_\tau(x, u)$ ...
+\RM{here} 
+
+
+
+\begin{comment}
+We assume that each control system $\Sigma^i$ in $\set{\Sigma^i}_{i\in [1;N]}$ is equipped with an output map $h^i\colon X^i\rightarrow Y$ where $Y\subseteq\reals^p$ is a shared output space. Recall our motivating example, wherein the crane's state space consists of the cart's position ($z$), the cart's speed ($v_z$), the pendulum's angular position ($\theta$), and angular speed ($v_\theta$). The state space for the vehicle is described with only one state variable $z'$ describing its position. Note that $X^1\subseteq \reals^4$ and $X^2\subseteq \reals$. By defining $h^1(z,v_z,\theta,v_\theta)=\begin{bmatrix}z+l\sin(\theta)&0.6+l\cos(\theta)\end{bmatrix}^T$ and $h^2(z')=\begin{bmatrix}z'&0.4\end{bmatrix}^T$, both state spaces can be mapped to $Y\subseteq \reals^2$ in which we would like to compute their distance.
+%For example, in a multi-robot scenario, all of the robots move within a two or three dimensional space independent of their individual dynamics.
+We define distance between two control systems by $D\colon X^i\times X^j\rightarrow \reals_{\geq 0}$ with $D(u,v) = \| h^i(u)-h^j(v)\|$. We extend the definition of $D$ to measure distance between a system's state and a set defined over the shared output space: for any given $u\in X^i$ and $V\subseteq Y$, $D(u,V) \coloneqq \inf_{v\in V}\|h^i(u)-v\|$ \Sadegh{This is not right}.
+\end{comment}
+
+
+
+\begin{comment}
+There exists a locally Lipschitz function $f_{con}\colon X\times U\rightarrow X$ and an absolutely continuous function $\beta\colon \reals_{\geq 0} \rightarrow X$ such that for every $x\in X$, constant $u\in U$ and fixed sampling time $\tau>0$, 
 \begin{align}
 	&\dot \beta = f_{con}(\beta(t),u) \quad \beta(0) =x\nonumber\\
 	 &f(x,u) =\beta(\tau).\label{eq:cont_to_disc}
@@ -75,6 +123,9 @@ For an initial state $x_0$ and a control input $u\in U$, we define
 % \dot{\xi}\in f(\xi(t),u) + W. 
 %\end{equation} 
 %We collect all such solutions in the set $\Sol_\Sigma(x_0,u,T)$. 
+\end{comment}
+
+\begin{comment}
 
 \smallskip
 \noindent\textbf{Transition System.}\
@@ -85,16 +136,6 @@ for all $1\leq k < |\rho|$ there exists $u\in U$ such that $z_k\in \delta(z_{k-1
 if $|\rho| < \infty$ then $\delta(z_{|\rho|},u)= \emptyset$ for all $u\in U$.
 %For $D\subseteq X$, a $D$-trajectory is a trajectory $\xi$ with $\xi(0)\in D$.
 
-%\subsection{System Composition}
-
-\smallskip
-\noindent\textbf{Product Control System.}\
-Let $\set{\Sigma^i}_{i\in [1;N]}$, $\Sigma^i=(X^i,x_\init^i,U^i,W^i,f^i)$, be a set of $N$ control systems. 
-We assume that each control system $\Sigma^i$ in $\set{\Sigma^i}_{i\in [1;N]}$ is equipped with an output map $h^i\colon X^i\rightarrow Y$ where $Y\subseteq\reals^p$ is a shared output space. Recall our motivating example, wherein the crane's state space consists of the cart's position ($z$), the cart's speed ($v_z$), the pendulum's angular position ($\theta$), and angular speed ($v_\theta$). The state space for the vehicle is described with only one state variable $z'$ describing its position. Note that $X^1\subseteq \reals^4$ and $X^2\subseteq \reals$. By defining $h^1(z,v_z,\theta,v_\theta)=\begin{bmatrix}z+l\sin(\theta)&0.6+l\cos(\theta)\end{bmatrix}^T$ and $h^2(z')=\begin{bmatrix}z'&0.4\end{bmatrix}^T$, both state spaces can be mapped to $Y\subseteq \reals^2$ in which we would like to compute their distance.
-%For example, in a multi-robot scenario, all of the robots move within a two or three dimensional space independent of their individual dynamics.
-We define distance between two control systems by $D\colon X^i\times X^j\rightarrow \reals_{\geq 0}$ with $D(u,v) = \| h^i(u)-h^j(v)\|$. We extend the definition of $D$ to measure distance between a system's state and a set defined over the shared output space: for any given $u\in X^i$ and $V\subseteq Y$, $D(u,V) \coloneqq \inf_{v\in V}\|h^i(u)-v\|$ \Sadegh{This is not right}.
-The \emph{product control system of } $\set{\Sigma^i}_{i\in [1;N]}$ is the control system $\Sigma^\times = (X^\times, x_\init^\times, U^\times, \set{0^n}, f^\times, D)$ \Sadegh{why do you have $D$?} wherein $X^\times\coloneqq X^1\times \ldots \times X^N$ and we assume that $\sum_{i\in [1;N]} n_i=n$, $x_\init^\times\coloneqq (x_\init^1,\ldots,x_\init^N)$, $U^\times\coloneqq U^1\times\dots\times U^N\subset \reals^m$ and $f^\times\coloneqq f^{1}\otimes \ldots\otimes f^{N}$. 
-We use the state projection operator $\proj^{i}\colon X^\times\to X^i$, $\proj^{i}\colon (x^1,\ldots,x^N)\mapsto x^i$. %We extend definition of $\proj^i$ to denote projection of a set $A\subseteq X^\times$ to $X^i$ as $\proj^i(A)\coloneqq \set{x\mid \exists x^\times\in A.\;\proj^i(x^\times)=x}$.
 
 \smallskip
 \noindent\textbf{Product Transition System.}\
@@ -102,16 +143,64 @@ Let $\set{S^i}_{i\in [1;N]}$, $S^i=(Z^i,z_\init^i,U^i,\delta^i)$, be a set of $N
 The \emph{product transition system of } $\set{S^i}_{i\in [1;N]}$ is the transition system $S^\times \coloneqq (Z^\times, z_\init^\times, U^\times, \delta^\times)$ such that $Z^\times \coloneqq Z^1\times \ldots \times Z^N$, $z^\times_\init\coloneqq (z_\init^1,\ldots,z_\init^N)$, $U^\times \coloneqq U^1\times \ldots\times U^N$, and $\delta^\times \coloneqq \delta^1\otimes\ldots \otimes \delta^N$.
 From here on, we omit the domain of $i$ and use ``$\set{S^i}$'' and ``$\set{\Sigma^i}$'' respectively for ``$\set{S^i}_{i\in [1;N]}$'' and ``$\set{\Sigma^i}_{i\in [1;N]}$'' to simplify the notation.
 
-\subsection{Controllers} We introduce the notations for representing different types of controllers used in this paper. More details can be found in Sec.~\ref{sec:controllers}. %Let $\Sigma=(X,x_\init,U,W,f)$ denote a control system $\Sigma$.
-\Sadegh{why do you need this forward reference?}
-%\Sadegh{Which notation are we using for intervals $[a,b]$ or $[a;b]$?}
-An open-loop controller for $\Sigma=(X,x_\init,U,W,f)$ over a time interval $[0;T]$ with $T\in\mathbb N$ is a function $C\colon [0;T]\to U$. The open-loop is obtained when we connect $C$ with $\Sigma$ serially (denoted by $C \triangleright \Sigma$). %The \emph{open-loop behavior} $\Beh^\ol(x_\init)$ of $\Sigma_\tau$ under $C$ is the set of all trajectories of the transition system $C \triangleright \Sigma_\tau$.
- A feedback controller for $\Sigma$ over a time interval $[0;T]$ is a function $C\colon X\times[0;T]\to U$. The closed-loop is obtained when we connect $C$ with $\Sigma$ in feedback (denoted by $C\parallel\Sigma$). %The \emph{closed-loop behavior} $\Beh^\cl(x_\init)$ of $\Sigma_\tau$ under $C$ is the set of all trajectories of the transition system $C\parallel\Sigma_\tau$. 
-\Sadegh{The following sentence doesn't make sense. Let $\Sigma^\times$ be the product sampled time abstraction of $\set{\Sigma^i} $}.
-A global open-loop (feedback) controller of $\set{\Sigma^i} $ is an open-loop (a feedback) controller of $\Sigma^\times$.
-On the other hand, a set of local open-loop (feedback) controllers of $\set{\Sigma^i} $ is a set $\set{C^i} $ where, for every $i\in [1;N]$, $C^i$ is an open-loop (a feedback) controller of $\Sigma^i$. Given $\set{\Sigma^i} $ and a set of open-loop (feedback) controllers $\set{C^i} $, we define the \emph{decentralized open-loop} (\emph{decentralized closed-loop})---denoted by $\set{C^i} \triangleright \set{\Sigma^i} $ ($\set{C^i} \parallel \set{\Sigma^i} $)---as the product \textcolor{magenta}{transition system} of $\set{C^i\triangleright \Sigma^i} $ ($\set{C^i\parallel \Sigma^i} $).
 
-%here
+\end{comment}
+
+\smallskip\noindent
+\textbf{Controllers} 
+%
+% We introduce the notations for representing different types of controllers used in this paper. 
+An \emph{open-loop controller} for $\Sigma=(X,x_\init,U,W,f)$ over a time interval $[0;T]$ with $T\in\mathbb N$ 
+is a function $C\colon [0;T]\to U$. 
+The open-loop is obtained when we connect $C$ with $\Sigma$ serially, denoted by $C \triangleright \Sigma$. 
+The set of trajectories of the open-loop system $C\triangleright\Sigma$ consists of all finite trajectories
+$x_0, x_1, \ldots, x_T$ such that $x_0 = x_\init$ and for all $i \in [0; T-1]$, we have $x_{i+1} = f(x_i, C(i)) + w_i$ for some $w_i \in W$.
+
+A \emph{feedback controller} for $\Sigma$ over a time interval $[0;T]$, $T\in \mathbb N$, 
+is a function $C\colon X\times[0;T]\to U$. 
+We denote the feedback composition of $\Sigma$ with $C$ as $C \parallel \Sigma$.
+The set of trajectories of the closed-loop system $C\parallel\Sigma$ consists of all finite trajectories
+$x_0, x_1, \ldots, x_T$ such that $x_0 = x_\init$ and for all $i \in [0; T-1]$, we have $x_{i+1} = f(x_i, C(x_i, i)) + w_i$ for some $w_i \in W$.
+For both open-loop and feedback composition, the nominal trajectories are those trajectories for which $w_i = 0$ for all $i\geq 0$.
+
+Now let $\set{\Sigma^i}$ be a set of control systems.
+We can define \emph{global} open-loop and feedback controllers by defining the respective controllers on the product system $\Sigma^\times$.
+We can also define \emph{local} open-loop and feedback controllers $C^i$ for each $\Sigma^i$.
+In this latter case, the set of trajectories of the system $\set{C^i} \triangleright \set{\Sigma^i}$ (respectively, $\set{C^i}\parallel \set{\Sigma^i}$)
+are finite sequences 
+$x_0^\times, x_1^\times, \ldots, x_T^\times$ such that
+$x_0^\times = x_\init^\times$ and for each $j \in [0;T-1]$, we have 
+$\proj^{i}(x_{j+1}^\times) = f^i(\proj^i(x_j^\times), C^i(j))+w_{ji}$
+(respectively, 
+$\proj^{i}(x_{j+1}^\times) = f^i(\proj^i(x_j^\times), C^i(\proj^i(x_j^\times), j))+w_{ji}$)
+for some $w_{ji} \in W^i$, for each $i\in [1;N]$.
+
+\smallskip
+\noindent
+\textbf{Decentralized Controller Synthesis Problem}
+Let $\set{\Sigma^i}$ be a set of control systems.
+A \emph{control objective} $\mathcal{L}$ is a set of finite sequences in $(X^\times)^*$.
+Intuitively, a control objective specifies a set of ``good behaviors'' of a system.
+We consider \emph{reach-avoid} specifications, written as  $\lnot\avoid\; \mathcal{U}\; \goal$ in linear temporal logic, for two subsets 
+$\avoid, \goal \subseteq X^\times$.
+A trajectory $x_0, x_1, \ldots$ saisfies the reach avoid specification if there is some $j\in \mathbb{N}$ such that $x_j \in\goal$ and
+for all $i \in [0; j-1]$, we have $x_i \not \in\avoid$.
+
+The \emph{decentralized open-loop (resp. feedback) controller synthesis problem} asks, given $\set{\Sigma^i}$ and a control objective $\mathcal{L}$,
+to construct a set of local open-loop (resp.\ feedback) controllers $C^i$ such that
+the trajectories of $\set{C^i}\triangleright \set{\Sigma^i}$ (resp.\ $\set{C^i}\parallel \set{\Sigma^i}$ all belong to the control objective $\mathcal{L}$.
+
+Our notion of product of control systems is a Cartesian product of each component. Thus, we assume that the dynamics of individual control
+systems are not coupled.
+However, the overall trajectories of the control systems can be coupled through the control objective.
+
+\begin{example}
+\RM{give a simple example that shows the dynamics and the objective. In the objective, you can use the distance between two states, etc.}
+\qed
+\end{example}
+
+
+
 %\subsection{Abstraction-Based Controller Synthesis Background}
 %Let $\Sigma = (X, U, W, f, \cdot, \cdot)$ be a control system, $\tau>0$ be the sampling time, $\bound$ be a subset of $X$ which imposes a safety specification, $\Xh$ be a given \emph{finite partition} of $\bound$, and $\Uh$ be a \emph{finite subset} of equally spaced (w.r.t.\ infinity norm on $\mathbb{R}^m$) points in the set $U$. A \emph{finite-state abstraction} of $\Sigma$ is a finite state-transition system $(\Xh,\Uh,\fh)$, where $\xh'$ is in $\fh(\xh,u)$ if there is a pair of states $x\in \xh$ and $x'\in \xh'$ such that there is a trajectory $\xi\in \Sol_\Sigma(x,u,\tau)$ with $\xi(\tau)=x'$.
 %
