modified:   main.tex 	modified:   problem.tex 	modified:   theory.tex

--- a/main.tex
+++ b/main.tex
@@ -39,7 +39,8 @@
 
 \bibliographystyle{plain}
 \bibliography{references}
-\input{controllers}
+
+% \input{controllers}
 %\input{abcd}
 %\input{recycle_bin} 
 
